--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -25,7 +25,7 @@ jobs:
             print(error) 
           END
           )"
-            echo "Validator result is $validator_result"
+            echo $validator_result
           }
           echo "$erPath"
           erPath="ontology-network/musical-performance/RecordingProcess/ExpectedResults.txt"
@@ -40,13 +40,11 @@ jobs:
               do
                 # remove spaces in the line
                 no_whitespace="$(echo -e "${i}" | tr -d '[:space:]')"
-                echo "NO WHITESPACE $no_whitespace"
+                
                 # remove string quotations: beginning """ and ending """
                 remove_string_quotations=${no_whitespace:3:-3}
-                echo "No quotation $remove_string_quotations"
-                JSON_Validator $remove_string_quotations
-                echo " The function has been called"
-                evalResult=$(JSON_Validator $remove_string_quotations)
+                
+                evalResult=$(JSON_Validator "$remove_string_quotations")
                 if [ "$evalResult" = "Success!" ]; then
                   echo "nice"
                 else
