--- a/.github/workflows/01-XDTesting.yml
+++ b/.github/workflows/01-XDTesting.yml
@@ -154,12 +154,15 @@ jobs:
               remove_string_quotations=${no_whitespace:3:-3}
                 
               evalResult=$(JSON_Validator "$remove_string_quotations")
-          
-          if [ "$evalResult" = "Success!" ]; then
-            echo "JSONValidator=True" >> $GITHUB_ENV
-          else
-            echo "JSONValidator=False" >> $GITHUB_ENV
-          fi
+              
+              if [ "$evalResult" = "Success!" ]; then
+                echo "JSONValidator=True" >> $GITHUB_ENV
+              else
+                echo "JSONValidator=False" >> $GITHUB_ENV
+              fi
+          done
+          done <erRequirements.txt
+        
           
           
       - name: Construct CQ test cases
