--- a/.github/workflows/JSON-val.yml
+++ b/.github/workflows/JSON-val.yml
@@ -47,7 +47,7 @@ jobs:
                 remove_string_quotations=${no_whitespace:3:-3}
                 
                 evalResult=$(JSON_Validator "$remove_string_quotations")
-                echo "EvalResult is $evalResult"
+                echo $evalResult
                 
                 if [ "$evalResult" = "Success!" ]; then
                   echo "JSONValidator=True" >> $GITHUB_ENV
@@ -58,6 +58,9 @@ jobs:
           done <erRequirements.txt
           
           echo ${{ env.JSONValidator }}
+      
+      - name: Run JSON validator
+        run: echo ${{ env.JSONValidator }}
   
           #if [ "$valResult" = "Success!" ]; then
           #  echo "JSONValidator=True" >> $GITHUB_ENV
