--- a/.github/workflows/01-XDTesting.yml
+++ b/.github/workflows/01-XDTesting.yml
@@ -157,6 +157,7 @@ jobs:
                 remove_string_quotations=${no_whitespace:3:-3}
                 
                 evalResult=$(JSON_Validator "$remove_string_quotations")
+                echo "evalResults $evalResult"
               
                 if [ "$evalResult" = "Success!" ]; then
                   echo "JSONValidator=True" >> $GITHUB_ENV
