--- a/.github/workflows/01-XDTesting.yml
+++ b/.github/workflows/01-XDTesting.yml
@@ -166,6 +166,56 @@ jobs:
                 fi
             done
           done <erRequirements.txt
+      
+      - name: Run JSON validator
+        run: |
+          function JSON_Validator () {
+            validator_result="$( PYTHON_ARG="$1" python3 - <<END
+          import os
+          import json
+          import traceback
+          str = str(os.environ['PYTHON_ARG'])
+          try:
+            json.loads(str)
+            print("Success!")
+          except ValueError as error:
+            print(error) 
+          END
+          )"
+            echo $validator_result
+          }
+          echo "$erPath"
+          erPath="ontology-network/musical-performance/RecordingProcess/ExpectedResults.txt"
+          erRequirements=$(grep -i '[ER][0-9][0-9]*:\s' $erPath)
+          echo "$erRequirements" > "erRequirements.txt"
+          while read -r line; do
+            if [[ $line =~ :(.+) ]]; then
+              ERstrresult=${BASH_REMATCH[1]}
+            fi
+            
+            for i in "${ERstrresult[@]}"
+              do
+                # remove spaces in the line
+                no_whitespace="$(echo -e "${i}" | tr -d '[:space:]')"
+                
+                # remove string quotations: beginning """ and ending """
+                remove_string_quotations=${no_whitespace:3:-3}
+                
+                evalResult=$(JSON_Validator "$remove_string_quotations")
+                echo $evalResult
+                
+                if [ "$evalResult" = "Success!" ]; then
+                  echo "JSONValidator=True" >> $GITHUB_ENV
+                else
+                  echo "JSONValidator=False" >> $GITHUB_ENV
+                fi
+            done
+          done <erRequirements.txt
+          
+          echo ${{ env.JSONValidator }}
+      
+      - name: Print JSONValidator value
+        run: echo ${{ env.JSONValidator }}
         
       # A stop step that calls the cancel-action action to stop the automation if a condition has not been met.
       - name: JSON Stop process
