--- a/.github/workflows/01-XDTesting.yml
+++ b/.github/workflows/01-XDTesting.yml
@@ -167,14 +167,11 @@ jobs:
           
           echo ${{ env.JSONValidator }}
       
-      - name: Print JSONValidator value
-        run: echo ${{ env.JSONValidator }}
         
       # A stop step that calls the cancel-action action to stop the automation if a condition has not been met.
       - name: JSON Stop process
         if: ${{ env.JSONValidator == 'False' }}
-        #uses: andymckay/cancel-action@0.2  
-        run: echo ${{ env.JSONValidator }}
+        uses: andymckay/cancel-action@0.2  
           
       - name: Construct CQ test cases
         if: ${{ env.JSONValidator == 'True' }}
