--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,11 +8,11 @@ name: Construct OWLUnit test cases
 
 # The event that triggers the action.
 on: 
-  push: 
-    branches: 
-      - main
-    paths: 
-      - 'ontology-network/musical-performance/**'
+  #push: 
+  #  branches: 
+  #    - main
+  #  paths: 
+  #    - 'ontology-network/musical-performance/**'
   workflow_dispatch:
 
 jobs:
