--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -13,7 +13,7 @@ on:
     branches: 
       - main
     paths: 
-      - 'ontology-network/musical-performance/RecordingProcess/SPARQLUnitTest/CQDataSet/'
+      - 'ontology-network/musical-performance/RecordingProcess/SPARQLUnitTest/CQDataSet/**'
   workflow_dispatch:
  
 jobs:
