--- a/.github/workflows/01-XDTesting.yml
+++ b/.github/workflows/01-XDTesting.yml
@@ -42,11 +42,14 @@ jobs:
             if [ -s CompetencyQuestions.txt ] && [ -s SPARQLQuery.txt ] && [ -s ExpectedResults.txt ] && [ -s $line.owl ]
             then
               echo "check=True" >> $GITHUB_ENV
+              echo "True CQ"
             elif [ -s GeneralConstraints.txt ] && [ -s SPARQLQuery.txt ] && [ -s $line.owl ]
             then
               echo "check=True" >> $GITHUB_ENV
+              echo "True IV"
             else
               echo "check=False" >> $GITHUB_ENV
+              echo "False"
             fi
             done < UserInput.txt
             echo $check 
