--- a/.github/workflows/crosscheck-input.yml
+++ b/.github/workflows/crosscheck-input.yml
@@ -41,32 +41,17 @@ jobs:
             line="$line"
             echo "Line read from file - $line" 
             cd $line
-            # This script checks if the input that is necessary to run the test are non empty files. 
-            counter=0
-            for file in *.txt
-            do 
-              if [ -s $file ] 
-              then
-                rm -f empty.txt
-                touch full.txt
-                counter=$((counter+1))
-                echo "$file is not empty"
+            if [ -s CompetencyQuestions.txt ] && [ -s SPARQLQuery.txt ] && [ -s ExpectedResults.txt ] && [ -s $line.owl ]; then
+              echo "CQ Test run ready to begin!"
+              cat $line.owl
+            elif [ -s GeneralConstraints.txt ] && [ -s SPARQLQuery.txt ] && [ -s $line.owl ]; then
+              echo "IV Test run ready to begin!"
             else
-                # The file is empty.
-                rm -f full.txt
-                touch empty.txt
-                echo "$file is empty"
-              fi
-            done
-            echo "Counter is $counter"
-            done < UserInput.txt
-            if ((counter<4))
-              then 
-                echo "Missing files: Test run cannot start!"
-              else
-                echo "Test run ready to begin!"
+              echo "Missing files: Test run cannot start!"
             fi
-      
+            done < UserInput.txt
+            
+           
       
                   
               
