--- a/.github/workflows/crosscheck-input.yml
+++ b/.github/workflows/crosscheck-input.yml
@@ -46,7 +46,7 @@ jobs:
              echo "CQ exists!"
             fi
             
-            if [ -s SPARQLQuery.txt ]; then
+            if [ -s SPARQLQueries.txt ]; then
              echo "SPARQL exists!"
             fi
             
@@ -64,9 +64,9 @@ jobs:
             
             
             
-            if [ -s CompetencyQuestions.txt ] && [ -s SPARQLQuery.txt ] && [ -s ExpectedResults.txt ] && [ -s $line.owl ]; then
+            if [ -s CompetencyQuestions.txt ] && [ -s SPARQLQueries.txt ] && [ -s ExpectedResults.txt ] && [ -s $line.owl ]; then
                 echo "CQ Test run ready to begin!"
-            elif [ -s GeneralConstraints.txt ] && [ -s SPARQLQuery.txt ] && [ -s $line.owl ]; then
+            elif [ -s GeneralConstraints.txt ] && [ -s SPARQLQueries.txt ] && [ -s $line.owl ]; then
               echo "IV Test run ready to begin!"
             else
               echo "Missing files: Test run cannot start!"
