--- a/.github/workflows/01-XDTesting.yml
+++ b/.github/workflows/01-XDTesting.yml
@@ -85,7 +85,7 @@ jobs:
           
           echo "$sparqlPath"
           sparqlPath="ontology-network/musical-performance/RecordingProcess/SPARQLQueries.txt"
-          sparqlCQRequirements=$(grep -i '[SQCQ][0-9][0-9]*:\s' $sparqlPath)
+          sparqlCQRequirements=$(grep -i '[SQ][??][0-9][0-9]*:\s' $sparqlPath)
           echo "$sparqlCQRequirements" > "sparqlCQRequirements.txt"
             while read line; do
               if [[ $line =~ :(.+) ]]; then
