--- a/.github/workflows/01-XDTesting.yml
+++ b/.github/workflows/01-XDTesting.yml
@@ -94,7 +94,7 @@ jobs:
             done <sparqlCQRequirements.txt
           
           valResult=$(SPARQL_Validator "$SQstrresult")
-          
+
           if [ "$valResult" = "Success!" ]; then
             echo "SPARQLValidator=True" >> $GITHUB_ENV
           else
@@ -129,7 +129,7 @@ jobs:
           erPath="ontology-network/musical-performance/RecordingProcess/ExpectedResults.txt"
           erRequirements=$(grep -i '[ER??][0-9][0-9]*:\s' $erPath)
           echo "$erRequirements" > "erRequirements.txt"
-          cat erRequirements.txt
+          echo $erRequirements
           while read -r line; do
             if [[ $line =~ :(.+) ]]; then
               ERstrresult=${BASH_REMATCH[1]}
@@ -154,8 +154,6 @@ jobs:
                 fi
             done
           done <erRequirements.txt
-          
-          echo ${{ env.JSONValidator }}
       
         
       # A stop step that calls the cancel-action action to stop the automation if a condition has not been met.
