--- a/.github/workflows/01-XDTesting.yml
+++ b/.github/workflows/01-XDTesting.yml
@@ -174,7 +174,7 @@ jobs:
           
           echo "$erPath"
           erPath="ontology-network/musical-performance/RecordingProcess/ExpectedResults.txt"
-          erRequirements=$(grep -i '[ERCQ][0-9][0-9]*:\s' $erPath)
+          erRequirements=$(grep -i '[ER][0-9][0-9]*:\s' $erPath)
           
           base="https://raw.githubusercontent.com/"
           base1=$(git config --get remote.origin.url | sed 's/.*\/\([^ ]*\/[^.]*\).*/\1/')
@@ -201,20 +201,20 @@ jobs:
           tdPrefix="@prefix td: <${cqtd}> ."
           tcPrefix="@prefix tc: <${cqtc}> ."
           
-          echo '@prefix owlunit: <https://w3id.org/OWLunit/ontology/> . \n' > cqTemplate.txt
-          echo ' $mpPrefix \n ' >> cqTemplate.txt 
-          echo ' $tdPrefix \n ' >> cqTemplate.txt 
-          echo ' $tcPrefix \n ' >> cqTemplate.txt 
+          echo " @prefix owlunit: <https://w3id.org/OWLunit/ontology/> . \n" > cqTemplate.txt
+          echo " $mpPrefix \n " >> cqTemplate.txt 
+          echo " $tdPrefix \n " >> cqTemplate.txt 
+          echo " $tcPrefix \n " >> cqTemplate.txt 
         
           
           echo "$cqRequirements" > "cqRequirements.txt"
           while read line; do
             CQid=${line//[!0-9]/}
             TCid="$line$CQid"
-            echo 'tc:$TCid.ttl a owlunit:CompetencyQuestionVerification ; \n ' >> cqTemplate.txt 
+            echo "tc:$TCid.ttl a owlunit:CompetencyQuestionVerification ; \n " >> cqTemplate.txt 
             if [[ $line =~ :(.+) ]]; then
               CQstrresult=${BASH_REMATCH[1]}
-              echo 'owlunit:hasCompetencyQuestion "$CQstrresult" ; \n' >> cqTemplate.txt 
+              echo "owlunit:hasCompetencyQuestion '"'$CQstrresult'"'" ; \n' >> cqTemplate.txt 
             else
               echo "unable to parse string $line"
             fi
