--- a/.github/workflows/01-XDTesting.yml
+++ b/.github/workflows/01-XDTesting.yml
@@ -201,7 +201,7 @@ jobs:
           tdPrefix="@prefix td: <${cqtd}> ."
           tcPrefix="@prefix tc: <${cqtc}> ."
           
-          echo " @prefix owlunit: <https://w3id.org/OWLunit/ontology/> . \n" > cqTemplate.txt
+          echo " @prefix owlunit: <https://w3id.org/OWLunit/ontology/> . \n " > cqTemplate.txt
           echo " $mpPrefix \n " >> cqTemplate.txt 
           echo " $tdPrefix \n " >> cqTemplate.txt 
           echo " $tcPrefix \n " >> cqTemplate.txt 
@@ -211,10 +211,10 @@ jobs:
           while read line; do
             CQid=${line//[!0-9]/}
             TCid="$line$CQid"
-            echo "tc:$TCid.ttl a owlunit:CompetencyQuestionVerification ; \n " >> cqTemplate.txt 
+            echo " tc:$TCid.ttl a owlunit:CompetencyQuestionVerification ; \n " >> cqTemplate.txt 
             if [[ $line =~ :(.+) ]]; then
               CQstrresult=${BASH_REMATCH[1]}
-              echo "owlunit:hasCompetencyQuestion '"'$CQstrresult'"'" ; \n' >> cqTemplate.txt 
+              echo " owlunit:hasCompetencyQuestion $CQstrresult " ; \n' >> cqTemplate.txt 
             else
               echo "unable to parse string $line"
             fi
