Update and rename gitDiff.yml to ChangedFiles.yml

--- a/.github/workflows/ChangedFiles.yml
+++ b/.github/workflows/ChangedFiles.yml
@@ -1,5 +1,6 @@
-
+# Action to get which files where changed after a push or a pull request.
 name: Get push difference
+
 on: [push, pull_request]
 
 jobs:
